--- a/public/container.html
+++ b/public/container.html
@@ -18,7 +18,7 @@
                     $(document).ready(function () {
                         setTimeout(function () {
                             $.ajax({
-                                url: 'https://dev-frontend.trytada.com/getWidget',
+                                url: 'https://dev-frontend-tada.myshopify.com/getWidget',
                                 type: 'post',
                                 data: JSON.stringify({
                                     timeToken: getCookie('timeToken'),
