--- a/public/container.html
+++ b/public/container.html
@@ -18,7 +18,7 @@
                     $(document).ready(function () {
                         setTimeout(function () {
                             $.ajax({
-                                url: 'https://dev-classywheel.trytada.com/getWidget',
+                                url: `${process.env.TUNNEL_URL}/getWidget`,
                                 type: 'post',
                                 data: JSON.stringify({
                                     timeToken: getCookie('timeToken'),
